# Tyre_Inspection_Bot

./: .gitignore  ALL_CRITICAL_FIXES_COMPLETE.md  ARCHITECTURE.md  BOUNDING_BOX_VALIDATION_FIX.md  BUILD_AND_TEST.md  CAMERA_SETUP.md  CMD_VEL_CONTINUITY_FIX.md  COMPLETE_CODE_PATH_TRACE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_FIX_SUMMARY_ALL.md  COMPLETE_REDESIGN_PLAN.md  CONSTRUCTION_DOCUMENT.md  CONTRIBUTING.md  CRITICAL_CODE_SAFEGUARDS.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_COMPLETE.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_FIX_RESPAWN_ADDED.md  CRITICAL_ISSUES_COMPLETION_PLAN.md  DEPLOYMENT.md  DETECTION_APPROACH_ANALYSIS.md  DETECTION_APPROACH_FIXES.md  DIRECT_NAV_HARDWARE_DEADZONE_FIX.md  FINAL_FIX_SUMMARY_13.md  FINAL_READINESS.md  FIXES_APPLIED.md  FOOLPROOF_NAVIGATION_WEEK_PLAN.md  FRAME_CONSISTENCY_FIX.md  GOAL_CALCULATION_FIX_COMPLETE.md  GOAL_CALCULATION_FIX_FINAL.md  GOAL_VALIDATION_FIX.md  IMPLEMENTATION_STATUS.md  ITERATION_2_FIXES.md  ITERATION_3_CRITICAL_BUG_FIX.md  ITERATION_4_COMMAND_QUEUE_FIX.md  ITERATION_5_COMMAND_EFFECTIVENESS_INSTRUMENTATION.md  MAP_BOUNDS_VALIDATION_FIX.md  MISSION_FLOW_DIAGRAM.md  MOVEMENT_GUARANTEE_ODOM_NEVER_RECEIVED_FIX.md  NAV2_CMD_VEL_REMAPPING_FIX.md  (+29 more)
analysis/: aora_topic_map.md.orig  (+12 more)
src/aurora_interface/: CMakeLists.txt  package.xml
src/aurora_interface/launch/: aurora_full.launch.py
src/aurora_interface/scripts/: aurora_health_monitor.py
src/aurora_sdk_bridge/: CMakeLists.txt  package.xml
src/aurora_sdk_bridge/config/: stereo_production_params.yaml
src/aurora_sdk_bridge/launch/: aurora_sdk_bridge.launch.py
(+346 files in other folders)
