<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aurora_interface</name>
  <version>0.1.0</version>
  <description>Central Aurora sensor interface: aggregates slamware + aurora_sdk_bridge, health monitoring</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>slamware_ros_sdk</exec_depend>
  <exec_depend>aurora_sdk_bridge</exec_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
